<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">伙伴医生</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">输入医院、医生或科室</string>
    <string name="appointment_title">手术预约</string>
    <string name="appointment_msg">名医主刀，手术无忧</string>
    <string name="interrogation_title">快速问诊</string>
    <string name="interrogation_msg">专业解答，有问速回</string>
    <string name="overseas_title">海外医疗</string>
    <string name="overseas_msg">海外赴医</string>
    <string name="green_channel_title">绿色通道</string>
    <string name="green_channel_msg">私人医生</string>
    <string name="doctors_recommend">名医推荐</string>
    <string name="precise_reservation_title">精准预约</string>
    <string name="precise_reservation_msg">让专家帮你找医生</string>
    <string name="doctors_title">杜医生</string>
    <string name="hot_news">热门资讯</string>
    <string name="home_page">主页</string>

    <string name="hospital_recommended">推荐医院</string>
    <string name="healthy_news">健康资讯</string>
    <string name="mine">我的</string>

    <string name="user">用户名</string>
    <string name="interrogation_record_tv">问诊记录</string>
    <string name="reserve">预约订单</string>
    <string name="reserve_details">预约详情</string>
    <string name="common_problem">常见问题</string>
    <string name="about_us">关于我们</string>
    <string name="news_detail">资讯详情</string>
    <string name="checkupdate">检查更新</string>
    <string name="logout">退出登录</string>

    <string name="login">登录</string>
    <string name="login_rightnow">已有账号？马上登录</string>
    <string name="welcome_use">欢迎使用诺春风医疗系统</string>
    <string name="setting">设置</string>
    <string name="phonenumber">手机号码</string>
    <string name="password">密码</string>
    <string name="print_password">输入密码</string>
    <string name="no2register">没有账号？马上注册</string>

    <string name="register">注册</string>
    <string name="welcome_register">欢迎注册诺春风医疗</string>
    <string name="printnumber">手机号码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="print_identifying_code">验证码</string>

    <string name="next_step">下一步</string>

    <string name="add_patient">添加就诊人</string>
    <string name="add_patient_remind">就诊人信息</string>
    <string name="patient_name">姓名</string>
    <string name="patient_sex">性别</string>
    <string name="patient_age">年龄</string>
    <string name="patient_number">联系号码</string>
    <string name="reserve_done">完成预约</string>

    <string name="apply_now">立即申请</string>

    <string name="doctors_details">医生详情</string>

    <string name="doctors_list">医生列表</string>

    <string name="login_invalid">登录已过期，请重新登录</string>
    <string name="interrogation_details">问诊详情</string>

    <string name="region">全国</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="remind">提示</string>
    <string name="msg_delete_cache_data">你确定要清理所有缓存信息吗？</string>

    <string name="pulldown_loadlast">上拉加载</string>
    <string name="pulldown_action">下拉刷新</string>
    <string name="release_action">松开后刷新</string>
    <string name="release_toload">松开后加载</string>
    <string name="status_refreshing">正在刷新...</string>
    <string name="status_loading">正在加载...</string>
    <string name="netdata_over">没有更多了</string>
    <string name="header_last_time">上次更新时间：</string>
    <string name="load_success">加载完成</string>
    <string name="refresh_success">刷新完成</string>
    <string name="load_fail">加载失败</string>
    <string name="refresh_fail">刷新失败</string>
</resources>