<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/dan_gray"
              android:orientation="vertical"
    >

    <!--头布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height90"
        android:background="@color/blue2"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/header_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:drawableLeft="@mipmap/navigation_back"
            android:gravity="center"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/header_center_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="欢迎注册伙伴医生"
            android:textColor="@color/white"
            android:textSize="@dimen/header_center"
            />
    </RelativeLayout>

    <!--输入手机-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/grap1"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/iv_printnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/login_phone"
                />

            <EditText
                android:id="@+id/et_printnumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height90"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/iv_printnumber"
                android:background="@color/white"
                android:hint="@string/printnumber"
                android:inputType="number"
                android:textColorHint="@color/msg_text"
                android:textSize="@dimen/reserve_details_static"
                />
        </RelativeLayout>
    </RelativeLayout>

    <!--获取验证码项-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/grap1"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/iv_identifying_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/login_code"
                />

            <com.nuocf.yshuobang.myview.TimeButton
                android:id="@+id/tv_identifying_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/grap15"
                android:padding="8dp"
                android:background="@null"
                android:text="@string/get_identifying_code"
                android:textColor="@color/blue"
                android:textSize="@dimen/reserve_details_static"
                />

            <EditText
                android:id="@+id/et_print_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height90"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@+id/tv_identifying_code"
                android:layout_toRightOf="@+id/iv_identifying_code"
                android:background="@color/white"
                android:hint="@string/print_identifying_code"
                android:textColorHint="@color/msg_text"
                android:inputType="number"
                android:textSize="@dimen/reserve_details_static"
                />

        </RelativeLayout>
    </RelativeLayout>

    <!--输入密码项-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/grap1"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/iv_printpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/login_pwd"
                />

            <EditText
                android:id="@+id/et_printpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height90"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/iv_printpassword"
                android:background="@color/white"
                android:hint="@string/password"
                android:textColorHint="@color/msg_text"
                android:inputType="textPassword"
                android:textSize="@dimen/reserve_details_static"
                />
        </RelativeLayout>
    </RelativeLayout>

    <!--确认密码项-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/grap1"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/iv_confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@mipmap/login_pwd"
                />

            <EditText
                android:id="@+id/et_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height90"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/iv_confirmpassword"
                android:background="@color/white"
                android:hint="确认密码"
                android:textColorHint="@color/msg_text"
                android:inputType="textPassword"
                android:textSize="@dimen/reserve_details_static"
                />
        </RelativeLayout>
    </RelativeLayout>

    <!--注册按钮-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grap20"
        >

        <Button
            android:id="@+id/btn_register"
            style="@style/all_button_style2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register"
            />

    </RelativeLayout>
    <!--马上登录文字-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grap20"
        >

        <TextView
            android:id="@+id/tv_loginnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_rightnow"
            android:textColor="@color/blue"
            android:textSize="@dimen/reserve_details_static"
            />

    </RelativeLayout>
</LinearLayout>