<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/dan_gray"
              android:orientation="vertical"
    >

    <!--头布局-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height90"
        android:background="@color/blue2"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/header_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:drawableLeft="@mipmap/navigation_back"
            android:gravity="center"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/header_center_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/header_center"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/grap1"
        android:background="@color/gray"
        />

    <!--检查更新项-->
    <RelativeLayout
        android:id="@+id/checkupdate_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:padding="@dimen/home_rl_padding"
        >

        <TextView
            android:id="@+id/checkupdate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:text="@string/checkupdate"
            android:textSize="@dimen/mine_textsize"
            />

        <ImageView
            android:id="@+id/checkupdate_arrow"
            style="@style/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/checkupdate_arrow"
            android:text="v1.0.0"
            android:textColor="@color/dark_gray_text" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/grap1"
        android:background="@color/gray"
        />
    <RelativeLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/home_rl_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="清除缓存"
            android:textSize="@dimen/mine_textsize"/>
        <ImageView
            android:id="@+id/imageView4"
            style="@style/right_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            />
        <TextView
            android:id="@+id/cache_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/imageView4"
            android:text="0"
            android:textColor="@color/dark_gray_text" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/grap1"
        android:background="@color/gray"
        />

    <!--注销项-->
    <RelativeLayout
        android:id="@+id/logout_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:padding="@dimen/home_rl_padding"
        android:visibility="visible"
        >

        <TextView
            android:id="@+id/logout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:text="@string/logout"
            android:textSize="@dimen/mine_textsize"
            />

        <ImageView
            android:id="@+id/logout_arrow"
            style="@style/right_arrow"
            />
    </RelativeLayout>

    <!--登录项-->
    <RelativeLayout
        android:id="@+id/login_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:padding="@dimen/home_rl_padding"
        android:visibility="visible"
        >

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:text="@string/login"
            android:textSize="@dimen/mine_textsize"
            />

        <ImageView
            android:id="@+id/login_arrow"
            style="@style/right_arrow"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/grap1"
        android:background="@color/gray"
        />
</LinearLayout>